// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms | Spinner Colors 1`] = `
<div
  className="Display__StyledFlexDiv-sc-1yo6rmg-0 dODlaT"
  direction="column"
>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      Default
    </div>
    <div>
      <span
        className="Spinner__Animation-x7jzy3-0 fapQym"
      >
        <svg
          className="Spinner__StyledSvg-x7jzy3-1 ldbroN"
          height={16}
          viewBox="0 0 24 24"
          width={16}
        >
          <defs>
            <linearGradient
              id="spinner-defaultSpinner-1"
              x1="50%"
              x2="50%"
              y1="0%"
              y2="100%"
            >
              <stop
                offset="0%"
                stopColor="#0046FF"
                stopOpacity="0"
              />
              <stop
                offset="100%"
                stopColor="#0046FF"
                stopOpacity=".5"
              />
            </linearGradient>
            <linearGradient
              id="spinner-defaultSpinner-2"
              x1="50%"
              x2="50%"
              y1="0%"
              y2="100%"
            >
              <stop
                offset="0%"
                stopColor="#0046FF"
                stopOpacity=".5"
              />
              <stop
                offset="100%"
                stopColor="#0046FF"
              />
            </linearGradient>
          </defs>
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M12,0 C18.627417,0 24,5.372583 24,12 C24,18.627417 18.627417,24 12,24 M12,21 C16.9705627,21 21,16.9705627 21,12 C21,7.02943725 16.9705627,3 12,3"
              fill="url(#spinner-defaultSpinner-1)"
            />
            <path
              d="M0,0 C6.627417,0 12,5.372583 12,12 C12,18.627417 6.627417,24 0,24 M0,21 C4.97056275,21 9,16.9705627 9,12 C9,7.02943725 4.97056275,3 0,3"
              fill="url(#spinner-defaultSpinner-2)"
              transform="rotate(-180 6 12)"
            />
          </g>
        </svg>
      </span>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      Color: text
    </div>
    <div>
      <span
        className="Spinner__Animation-x7jzy3-0 fapQym"
      >
        <svg
          className="Spinner__StyledSvg-x7jzy3-1 ldbroN"
          height={16}
          viewBox="0 0 24 24"
          width={16}
        >
          <defs>
            <linearGradient
              id="spinner-defaultSpinnerText-1"
              x1="50%"
              x2="50%"
              y1="0%"
              y2="100%"
            >
              <stop
                offset="0%"
                stopColor="#282823"
                stopOpacity="0"
              />
              <stop
                offset="100%"
                stopColor="#282823"
                stopOpacity=".5"
              />
            </linearGradient>
            <linearGradient
              id="spinner-defaultSpinnerText-2"
              x1="50%"
              x2="50%"
              y1="0%"
              y2="100%"
            >
              <stop
                offset="0%"
                stopColor="#282823"
                stopOpacity=".5"
              />
              <stop
                offset="100%"
                stopColor="#282823"
              />
            </linearGradient>
          </defs>
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M12,0 C18.627417,0 24,5.372583 24,12 C24,18.627417 18.627417,24 12,24 M12,21 C16.9705627,21 21,16.9705627 21,12 C21,7.02943725 16.9705627,3 12,3"
              fill="url(#spinner-defaultSpinnerText-1)"
            />
            <path
              d="M0,0 C6.627417,0 12,5.372583 12,12 C12,18.627417 6.627417,24 0,24 M0,21 C4.97056275,21 9,16.9705627 9,12 C9,7.02943725 4.97056275,3 0,3"
              fill="url(#spinner-defaultSpinnerText-2)"
              transform="rotate(-180 6 12)"
            />
          </g>
        </svg>
      </span>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      Color: positive
    </div>
    <div>
      <span
        className="Spinner__Animation-x7jzy3-0 fapQym"
      >
        <svg
          className="Spinner__StyledSvg-x7jzy3-1 ldbroN"
          height={16}
          viewBox="0 0 24 24"
          width={16}
        >
          <defs>
            <linearGradient
              id="spinner-defaultSpinnerPositive-1"
              x1="50%"
              x2="50%"
              y1="0%"
              y2="100%"
            >
              <stop
                offset="0%"
                stopColor="#00D200"
                stopOpacity="0"
              />
              <stop
                offset="100%"
                stopColor="#00D200"
                stopOpacity=".5"
              />
            </linearGradient>
            <linearGradient
              id="spinner-defaultSpinnerPositive-2"
              x1="50%"
              x2="50%"
              y1="0%"
              y2="100%"
            >
              <stop
                offset="0%"
                stopColor="#00D200"
                stopOpacity=".5"
              />
              <stop
                offset="100%"
                stopColor="#00D200"
              />
            </linearGradient>
          </defs>
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M12,0 C18.627417,0 24,5.372583 24,12 C24,18.627417 18.627417,24 12,24 M12,21 C16.9705627,21 21,16.9705627 21,12 C21,7.02943725 16.9705627,3 12,3"
              fill="url(#spinner-defaultSpinnerPositive-1)"
            />
            <path
              d="M0,0 C6.627417,0 12,5.372583 12,12 C12,18.627417 6.627417,24 0,24 M0,21 C4.97056275,21 9,16.9705627 9,12 C9,7.02943725 4.97056275,3 0,3"
              fill="url(#spinner-defaultSpinnerPositive-2)"
              transform="rotate(-180 6 12)"
            />
          </g>
        </svg>
      </span>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      Color: negative
    </div>
    <div>
      <span
        className="Spinner__Animation-x7jzy3-0 fapQym"
      >
        <svg
          className="Spinner__StyledSvg-x7jzy3-1 ldbroN"
          height={16}
          viewBox="0 0 24 24"
          width={16}
        >
          <defs>
            <linearGradient
              id="spinner-defaultSpinnerNegative-1"
              x1="50%"
              x2="50%"
              y1="0%"
              y2="100%"
            >
              <stop
                offset="0%"
                stopColor="#FF1900"
                stopOpacity="0"
              />
              <stop
                offset="100%"
                stopColor="#FF1900"
                stopOpacity=".5"
              />
            </linearGradient>
            <linearGradient
              id="spinner-defaultSpinnerNegative-2"
              x1="50%"
              x2="50%"
              y1="0%"
              y2="100%"
            >
              <stop
                offset="0%"
                stopColor="#FF1900"
                stopOpacity=".5"
              />
              <stop
                offset="100%"
                stopColor="#FF1900"
              />
            </linearGradient>
          </defs>
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M12,0 C18.627417,0 24,5.372583 24,12 C24,18.627417 18.627417,24 12,24 M12,21 C16.9705627,21 21,16.9705627 21,12 C21,7.02943725 16.9705627,3 12,3"
              fill="url(#spinner-defaultSpinnerNegative-1)"
            />
            <path
              d="M0,0 C6.627417,0 12,5.372583 12,12 C12,18.627417 6.627417,24 0,24 M0,21 C4.97056275,21 9,16.9705627 9,12 C9,7.02943725 4.97056275,3 0,3"
              fill="url(#spinner-defaultSpinnerNegative-2)"
              transform="rotate(-180 6 12)"
            />
          </g>
        </svg>
      </span>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      Color: warning
    </div>
    <div>
      <span
        className="Spinner__Animation-x7jzy3-0 fapQym"
      >
        <svg
          className="Spinner__StyledSvg-x7jzy3-1 ldbroN"
          height={16}
          viewBox="0 0 24 24"
          width={16}
        >
          <defs>
            <linearGradient
              id="spinner-defaultSpinnerWarning-1"
              x1="50%"
              x2="50%"
              y1="0%"
              y2="100%"
            >
              <stop
                offset="0%"
                stopColor="#FFCF00"
                stopOpacity="0"
              />
              <stop
                offset="100%"
                stopColor="#FFCF00"
                stopOpacity=".5"
              />
            </linearGradient>
            <linearGradient
              id="spinner-defaultSpinnerWarning-2"
              x1="50%"
              x2="50%"
              y1="0%"
              y2="100%"
            >
              <stop
                offset="0%"
                stopColor="#FFCF00"
                stopOpacity=".5"
              />
              <stop
                offset="100%"
                stopColor="#FFCF00"
              />
            </linearGradient>
          </defs>
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M12,0 C18.627417,0 24,5.372583 24,12 C24,18.627417 18.627417,24 12,24 M12,21 C16.9705627,21 21,16.9705627 21,12 C21,7.02943725 16.9705627,3 12,3"
              fill="url(#spinner-defaultSpinnerWarning-1)"
            />
            <path
              d="M0,0 C6.627417,0 12,5.372583 12,12 C12,18.627417 6.627417,24 0,24 M0,21 C4.97056275,21 9,16.9705627 9,12 C9,7.02943725 4.97056275,3 0,3"
              fill="url(#spinner-defaultSpinnerWarning-2)"
              transform="rotate(-180 6 12)"
            />
          </g>
        </svg>
      </span>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      Color: label
    </div>
    <div>
      <span
        className="Spinner__Animation-x7jzy3-0 fapQym"
      >
        <svg
          className="Spinner__StyledSvg-x7jzy3-1 ldbroN"
          height={16}
          viewBox="0 0 24 24"
          width={16}
        >
          <defs>
            <linearGradient
              id="spinner-defaultSpinnerLabel-1"
              x1="50%"
              x2="50%"
              y1="0%"
              y2="100%"
            >
              <stop
                offset="0%"
                stopColor="#6E6E69"
                stopOpacity="0"
              />
              <stop
                offset="100%"
                stopColor="#6E6E69"
                stopOpacity=".5"
              />
            </linearGradient>
            <linearGradient
              id="spinner-defaultSpinnerLabel-2"
              x1="50%"
              x2="50%"
              y1="0%"
              y2="100%"
            >
              <stop
                offset="0%"
                stopColor="#6E6E69"
                stopOpacity=".5"
              />
              <stop
                offset="100%"
                stopColor="#6E6E69"
              />
            </linearGradient>
          </defs>
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M12,0 C18.627417,0 24,5.372583 24,12 C24,18.627417 18.627417,24 12,24 M12,21 C16.9705627,21 21,16.9705627 21,12 C21,7.02943725 16.9705627,3 12,3"
              fill="url(#spinner-defaultSpinnerLabel-1)"
            />
            <path
              d="M0,0 C6.627417,0 12,5.372583 12,12 C12,18.627417 6.627417,24 0,24 M0,21 C4.97056275,21 9,16.9705627 9,12 C9,7.02943725 4.97056275,3 0,3"
              fill="url(#spinner-defaultSpinnerLabel-2)"
              transform="rotate(-180 6 12)"
            />
          </g>
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | Spinner Regression: 2 spinners with same color and size affects each other in Chrome 1`] = `
<div>
  <div>
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 dkRrrO"
    >
      Only the one with green border should be shown. The bug before was that if two spinners had the same size and color, both were hidden.
    </span>
  </div>
  <div
    style={
      Object {
        "border": "1px red solid",
        "display": "none",
      }
    }
  >
    <span
      className="Spinner__Animation-x7jzy3-0 fapQym"
    >
      <svg
        className="Spinner__StyledSvg-x7jzy3-1 ldbroN"
        height={32}
        viewBox="0 0 24 24"
        width={32}
      >
        <defs>
          <linearGradient
            id="spinner-firstSpinner-1"
            x1="50%"
            x2="50%"
            y1="0%"
            y2="100%"
          >
            <stop
              offset="0%"
              stopColor="#0046FF"
              stopOpacity="0"
            />
            <stop
              offset="100%"
              stopColor="#0046FF"
              stopOpacity=".5"
            />
          </linearGradient>
          <linearGradient
            id="spinner-firstSpinner-2"
            x1="50%"
            x2="50%"
            y1="0%"
            y2="100%"
          >
            <stop
              offset="0%"
              stopColor="#0046FF"
              stopOpacity=".5"
            />
            <stop
              offset="100%"
              stopColor="#0046FF"
            />
          </linearGradient>
        </defs>
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M12,0 C18.627417,0 24,5.372583 24,12 C24,18.627417 18.627417,24 12,24 M12,21 C16.9705627,21 21,16.9705627 21,12 C21,7.02943725 16.9705627,3 12,3"
            fill="url(#spinner-firstSpinner-1)"
          />
          <path
            d="M0,0 C6.627417,0 12,5.372583 12,12 C12,18.627417 6.627417,24 0,24 M0,21 C4.97056275,21 9,16.9705627 9,12 C9,7.02943725 4.97056275,3 0,3"
            fill="url(#spinner-firstSpinner-2)"
            transform="rotate(-180 6 12)"
          />
        </g>
      </svg>
    </span>
  </div>
  <div
    style={
      Object {
        "border": "1px green solid",
      }
    }
  >
    <span
      className="Spinner__Animation-x7jzy3-0 fapQym"
    >
      <svg
        className="Spinner__StyledSvg-x7jzy3-1 ldbroN"
        height={32}
        viewBox="0 0 24 24"
        width={32}
      >
        <defs>
          <linearGradient
            id="spinner-secondSpinner-1"
            x1="50%"
            x2="50%"
            y1="0%"
            y2="100%"
          >
            <stop
              offset="0%"
              stopColor="#0046FF"
              stopOpacity="0"
            />
            <stop
              offset="100%"
              stopColor="#0046FF"
              stopOpacity=".5"
            />
          </linearGradient>
          <linearGradient
            id="spinner-secondSpinner-2"
            x1="50%"
            x2="50%"
            y1="0%"
            y2="100%"
          >
            <stop
              offset="0%"
              stopColor="#0046FF"
              stopOpacity=".5"
            />
            <stop
              offset="100%"
              stopColor="#0046FF"
            />
          </linearGradient>
        </defs>
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M12,0 C18.627417,0 24,5.372583 24,12 C24,18.627417 18.627417,24 12,24 M12,21 C16.9705627,21 21,16.9705627 21,12 C21,7.02943725 16.9705627,3 12,3"
            fill="url(#spinner-secondSpinner-1)"
          />
          <path
            d="M0,0 C6.627417,0 12,5.372583 12,12 C12,18.627417 6.627417,24 0,24 M0,21 C4.97056275,21 9,16.9705627 9,12 C9,7.02943725 4.97056275,3 0,3"
            fill="url(#spinner-secondSpinner-2)"
            transform="rotate(-180 6 12)"
          />
        </g>
      </svg>
    </span>
  </div>
</div>
`;

exports[`Storyshots Atoms | Spinner Spinner big 1`] = `
<span
  className="Spinner__Animation-x7jzy3-0 fapQym"
>
  <svg
    className="Spinner__StyledSvg-x7jzy3-1 ldbroN"
    height={64}
    viewBox="0 0 24 24"
    width={64}
  >
    <defs>
      <linearGradient
        id="spinner-mySpinner-1"
        x1="50%"
        x2="50%"
        y1="0%"
        y2="100%"
      >
        <stop
          offset="0%"
          stopColor="#0046FF"
          stopOpacity="0"
        />
        <stop
          offset="100%"
          stopColor="#0046FF"
          stopOpacity=".5"
        />
      </linearGradient>
      <linearGradient
        id="spinner-mySpinner-2"
        x1="50%"
        x2="50%"
        y1="0%"
        y2="100%"
      >
        <stop
          offset="0%"
          stopColor="#0046FF"
          stopOpacity=".5"
        />
        <stop
          offset="100%"
          stopColor="#0046FF"
        />
      </linearGradient>
    </defs>
    <g
      fill="none"
      fillRule="evenodd"
    >
      <path
        d="M12,0 C18.627417,0 24,5.372583 24,12 C24,18.627417 18.627417,24 12,24 M12,21 C16.9705627,21 21,16.9705627 21,12 C21,7.02943725 16.9705627,3 12,3"
        fill="url(#spinner-mySpinner-1)"
      />
      <path
        d="M0,0 C6.627417,0 12,5.372583 12,12 C12,18.627417 6.627417,24 0,24 M0,21 C4.97056275,21 9,16.9705627 9,12 C9,7.02943725 4.97056275,3 0,3"
        fill="url(#spinner-mySpinner-2)"
        transform="rotate(-180 6 12)"
      />
    </g>
  </svg>
</span>
`;

exports[`Storyshots Atoms | Spinner Spinner default 1`] = `
<span
  className="Spinner__Animation-x7jzy3-0 fapQym"
>
  <svg
    className="Spinner__StyledSvg-x7jzy3-1 ldbroN"
    height={16}
    viewBox="0 0 24 24"
    width={16}
  >
    <defs>
      <linearGradient
        id="spinner-mySpinner-1"
        x1="50%"
        x2="50%"
        y1="0%"
        y2="100%"
      >
        <stop
          offset="0%"
          stopColor="#0046FF"
          stopOpacity="0"
        />
        <stop
          offset="100%"
          stopColor="#0046FF"
          stopOpacity=".5"
        />
      </linearGradient>
      <linearGradient
        id="spinner-mySpinner-2"
        x1="50%"
        x2="50%"
        y1="0%"
        y2="100%"
      >
        <stop
          offset="0%"
          stopColor="#0046FF"
          stopOpacity=".5"
        />
        <stop
          offset="100%"
          stopColor="#0046FF"
        />
      </linearGradient>
    </defs>
    <g
      fill="none"
      fillRule="evenodd"
    >
      <path
        d="M12,0 C18.627417,0 24,5.372583 24,12 C24,18.627417 18.627417,24 12,24 M12,21 C16.9705627,21 21,16.9705627 21,12 C21,7.02943725 16.9705627,3 12,3"
        fill="url(#spinner-mySpinner-1)"
      />
      <path
        d="M0,0 C6.627417,0 12,5.372583 12,12 C12,18.627417 6.627417,24 0,24 M0,21 C4.97056275,21 9,16.9705627 9,12 C9,7.02943725 4.97056275,3 0,3"
        fill="url(#spinner-mySpinner-2)"
        transform="rotate(-180 6 12)"
      />
    </g>
  </svg>
</span>
`;

exports[`Storyshots Atoms | Spinner Spinner with custom 2 sec delay 1`] = `null`;

exports[`Storyshots Atoms | Spinner Spinner with default delay 1`] = `null`;

exports[`Storyshots Atoms | Spinner Spinner with delay is set to false 1`] = `
<span
  className="Spinner__Animation-x7jzy3-0 fapQym"
>
  <svg
    className="Spinner__StyledSvg-x7jzy3-1 ldbroN"
    height={64}
    viewBox="0 0 24 24"
    width={64}
  >
    <defs>
      <linearGradient
        id="spinner-mySpinner-1"
        x1="50%"
        x2="50%"
        y1="0%"
        y2="100%"
      >
        <stop
          offset="0%"
          stopColor="#0046FF"
          stopOpacity="0"
        />
        <stop
          offset="100%"
          stopColor="#0046FF"
          stopOpacity=".5"
        />
      </linearGradient>
      <linearGradient
        id="spinner-mySpinner-2"
        x1="50%"
        x2="50%"
        y1="0%"
        y2="100%"
      >
        <stop
          offset="0%"
          stopColor="#0046FF"
          stopOpacity=".5"
        />
        <stop
          offset="100%"
          stopColor="#0046FF"
        />
      </linearGradient>
    </defs>
    <g
      fill="none"
      fillRule="evenodd"
    >
      <path
        d="M12,0 C18.627417,0 24,5.372583 24,12 C24,18.627417 18.627417,24 12,24 M12,21 C16.9705627,21 21,16.9705627 21,12 C21,7.02943725 16.9705627,3 12,3"
        fill="url(#spinner-mySpinner-1)"
      />
      <path
        d="M0,0 C6.627417,0 12,5.372583 12,12 C12,18.627417 6.627417,24 0,24 M0,21 C4.97056275,21 9,16.9705627 9,12 C9,7.02943725 4.97056275,3 0,3"
        fill="url(#spinner-mySpinner-2)"
        transform="rotate(-180 6 12)"
      />
    </g>
  </svg>
</span>
`;
